Add update & fix frontend
